feat: 使 MusicLyricsPanel 和 MusicLyricsWidget 使用同一套歌词解析器